2008-01-28  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update gpgme and kleopatra.

2008-01-25  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (EXTRA_DIST): Add
	patches/gnupg2-2.0.8/02-qualified.patch.
	* patches/gnupg2-2.0.8/02-qualified.patch: New file.

2008-01-24  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-gpgee.nsi: Fix last change.

	* src/Memento.nsh: New file from nsis 2.28.

2008-01-21  Marcus Brinkmann  <marcus@g10code.de>

	* src/installer.nsi: Include Memento.nsh, define
	MEMENTO_REGISTRY_ROOT and MEMENTO_REGISTRY_KEY.
	* src/inst-sections.nsi: Call MementoSectionDone.
	(onInit): Call MementoSectionRestore.
	(onInstSuccess): Call MementoSectionSave.
	* src/inst-claws-mail.nsi, src/inst-eudoragpg.nsi,
	src/inst-gnupg.nsi, src/inst-gnupg2.nsi, src/inst-gpa.nsi,
	src/inst-gpgee.nsi, src/inst-gpgex.nsi, src/inst-gpgol.nsi,
	src/inst-kleopatra.nsi, src/inst-man_advanced_de.nsi,
	src/inst-man_advanced_en.nsi, src/inst-man_novice_de.nsi,
	src/inst-man_novice_en.nsi, src/inst-sylpheed-claws.nsi,
	src/inst-winpt.nsi: Replace Section/SectionEnd by Memento macro
	calls.
	* src/make-msi.pl (gpg4win_nsis_stubs): Support memento sections.

2008-01-18  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update gpgol.
	* src/Makefile.am (gpg4win_pkg_gpgol_post_install): New macro.
	* src/inst-gpgol.nsi: Install the gpgol.pdf technical
	documentation.
	* src/uninst-gpgol.nsi: Uninstall it (and many directories).

	* packages/packages.current: Update kleopatra and kdelibs.

2008-01-16  Marcus Brinkmann  <marcus@g10code.de>

	* src/installer.nsi (MUI_WELCOME_TITLE, MUI_WELCOMEPAGE_TEXT):
	Define to ${WELCOME_TITLE_STR} and ${ABOUT_STR} respectively.
	(T_WelcomeTitle, T_About): Remove language strings.
	* src/gpg4win.nsi (WELCOME_TITLE_ENGLISH, WELCOME_TITLE_GERMAN)
	(ABOUT_GERMAN, ABOUT_ENGLISH): Removed macros.
	(WELCOME_TITLE_STR, ABOUT_STR): New macros.